ajout CI/CD + PostgreSQL

--- a/front/src/app/shared/components/home/home.component.html
+++ b/front/src/app/shared/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container" fxLayout="column" fxLayoutAlign="center center">
-  <span>
-    <img src="/assets/logo_p6.png" alt="logo" width="225"/>
+  <span class="welcome-message">
+    Bienvenue sur Your Car Your Way
   </span>
 
   <div fxLayout="row" fxLayoutAlign="center center" fxFlex.lt-md="column">
